make new mapping notebook

--- a/notebooks/GBIF_occurrences.ipynb
+++ b/notebooks/GBIF_occurrences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "\n",
     "This notebook shows how to access biological occurrence data from GBIF, a wonderful resource for biologists and anyone interested in biological data. \n",
     "\n",
+    "\n",
+    "## API Interface\n",
     "We'll start by making API calls to the Occurrence API, which holds records of where and when a particular organism was observed."
    ]
   },
@@ -124,26 +126,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3152178"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trial['results'][0]['genusKey']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -160,6 +142,27 @@
    ],
    "source": [
     "trial['endOfRecords']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3152178"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get the genusKey for Ayenia\n",
+    "trial['results'][0]['genusKey']"
    ]
   },
   {
@@ -224,6 +227,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Cleaning\n",
+    "\n",
     "Now that we have our DataFrame with all the records in it, I'm going to first save the full DataFrame as a CSV file, then I'll start cleaning up the data. A lot of the cleaning I'm going to do is based on my *very specialized* knowledge of this genus. "
    ]
   },
@@ -234,6 +239,27 @@
    "outputs": [],
    "source": [
     "df.to_csv(\"../data/Ayenia_full_dataframe.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3051: DtypeWarning: Columns (1,5,6,7,9,14,22,23,32,33,37,38,39,41,46,54,56,64,65,66,67,68,69,70,71,72,73,74,75,76,82,83,87,88,98,100,101,102,103,107,108,109,111,112,113,115,116,119,121,122,123,124,127,128,129,130,134,137,139,140,141,142,143,146,152,155,158,159,160,161,163,164,165,166,167) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Read back in csv file\n",
+    "df = pd.read_csv(\"../data/Ayenia_full_dataframe.csv\")"
    ]
   },
   {
@@ -265,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +339,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, let's just keep a few of the columns that we'll need for making a biodiversity heatmap. There's a lot of extra stuff in here that we just don't need."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_cleaned = df_cleanedobservations[['species', 'decimalLongitude', 'decimalLatitude', 'country']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>decimalLongitude</th>\n",
+       "      <th>decimalLatitude</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ayenia tomentosa</td>\n",
+       "      <td>-40.700556</td>\n",
+       "      <td>-19.530000</td>\n",
+       "      <td>Brazil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ayenia tomentosa</td>\n",
+       "      <td>-40.700556</td>\n",
+       "      <td>-19.530000</td>\n",
+       "      <td>Brazil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ayenia tomentosa</td>\n",
+       "      <td>-38.646389</td>\n",
+       "      <td>-8.592222</td>\n",
+       "      <td>Brazil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ayenia tomentosa</td>\n",
+       "      <td>-38.023611</td>\n",
+       "      <td>-8.105278</td>\n",
+       "      <td>Brazil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ayenia tomentosa</td>\n",
+       "      <td>-38.113056</td>\n",
+       "      <td>-8.592222</td>\n",
+       "      <td>Brazil</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            species  decimalLongitude  decimalLatitude country\n",
+       "0  Ayenia tomentosa        -40.700556       -19.530000  Brazil\n",
+       "1  Ayenia tomentosa        -40.700556       -19.530000  Brazil\n",
+       "2  Ayenia tomentosa        -38.646389        -8.592222  Brazil\n",
+       "3  Ayenia tomentosa        -38.023611        -8.105278  Brazil\n",
+       "4  Ayenia tomentosa        -38.113056        -8.592222  Brazil"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleaned.to_csv(\"../data/Ayenia_cleaned_dataframe.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our cleaned data, we can try mapping it next! We'll move to a new notebook for that. "
+   ]
   }
  ],
  "metadata": {
