clean repo and edit maps

--- a/notebooks/GBIF_mapping.ipynb
+++ b/notebooks/GBIF_mapping.ipynb
@@ -44,7 +44,8 @@
    "outputs": [],
    "source": [
     "#Read back in csv file\n",
-    "df = pd.read_csv(\"../data/Ayenia_cleaned_dataframe.csv\")"
+    "df = pd.read_csv(\"../data/Ayenia_cleaned_dataframe.csv\")\n",
+    "df.drop('Unnamed: 0', axis = 1, inplace = True)"
    ]
   },
   {
@@ -157,27 +158,11 @@
     "As you can tell, this map is a little misleading as to what parts of the New World these plants are found. In reality, _Ayenia_ is only found from the southernmost part of the US to the northernmost part of Argentina. By coloring an entire country, it makes it look like you could potentially find these countries way outside of their distribution range. I have some more issues with this choropleth that could probably fixed with tweaking a lot more parameters, but since this isn't really showing what I want anyway, I'm going to leave it as it is. \n",
     "\n",
     "Now to the second option for mapping:\n",
-    "2. Since we have the GPS points for each record, we can count how many different species are found in rasterized bins across the range. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- change coordinates to geopandas df\n",
-    "- import grid\n",
-    "- calculate 'overlap'?\n",
-    "- for each grid cell, how many different species, save as new feature of grid cell\n",
-    "- save grid as raster, plot with world raster layer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop('Unnamed: 0', axis = 1, inplace = True)"
+    "2. Since we have the GPS points for each record, we can count how many different species are found in 1 degree grid cells across the range. \n",
+    "    - Change coordinates to GeoPandas DF\n",
+    "    - Make 1 degree grid\n",
+    "    - Calculate how many species per cell\n",
+    "    - Plot species per cell"
    ]
   },
   {
@@ -191,186 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>species</th>\n",
-       "      <th>decimalLongitude</th>\n",
-       "      <th>decimalLatitude</th>\n",
-       "      <th>country</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-40.700556</td>\n",
-       "      <td>-19.530000</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>POINT (-40.70056 -19.53000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-40.700556</td>\n",
-       "      <td>-19.530000</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>POINT (-40.70056 -19.53000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-38.646389</td>\n",
-       "      <td>-8.592222</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>POINT (-38.64639 -8.59222)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-38.023611</td>\n",
-       "      <td>-8.105278</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>POINT (-38.02361 -8.10528)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-38.113056</td>\n",
-       "      <td>-8.592222</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>POINT (-38.11306 -8.59222)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3644</th>\n",
-       "      <td>Ayenia odonellii</td>\n",
-       "      <td>-64.170000</td>\n",
-       "      <td>-31.140000</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>POINT (-64.17000 -31.14000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3645</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-56.440000</td>\n",
-       "      <td>-24.090000</td>\n",
-       "      <td>Paraguay</td>\n",
-       "      <td>POINT (-56.44000 -24.09000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3646</th>\n",
-       "      <td>Ayenia tomentosa</td>\n",
-       "      <td>-56.770000</td>\n",
-       "      <td>-26.020000</td>\n",
-       "      <td>Paraguay</td>\n",
-       "      <td>POINT (-56.77000 -26.02000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3647</th>\n",
-       "      <td>Ayenia odonellii</td>\n",
-       "      <td>-61.400000</td>\n",
-       "      <td>-26.830000</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>POINT (-61.40000 -26.83000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3648</th>\n",
-       "      <td>Ayenia abutilifolia</td>\n",
-       "      <td>-89.580000</td>\n",
-       "      <td>21.100000</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>POINT (-89.58000 21.10000)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3649 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  species  decimalLongitude  decimalLatitude    country  \\\n",
-       "0        Ayenia tomentosa        -40.700556       -19.530000     Brazil   \n",
-       "1        Ayenia tomentosa        -40.700556       -19.530000     Brazil   \n",
-       "2        Ayenia tomentosa        -38.646389        -8.592222     Brazil   \n",
-       "3        Ayenia tomentosa        -38.023611        -8.105278     Brazil   \n",
-       "4        Ayenia tomentosa        -38.113056        -8.592222     Brazil   \n",
-       "...                   ...               ...              ...        ...   \n",
-       "3644     Ayenia odonellii        -64.170000       -31.140000  Argentina   \n",
-       "3645     Ayenia tomentosa        -56.440000       -24.090000   Paraguay   \n",
-       "3646     Ayenia tomentosa        -56.770000       -26.020000   Paraguay   \n",
-       "3647     Ayenia odonellii        -61.400000       -26.830000  Argentina   \n",
-       "3648  Ayenia abutilifolia        -89.580000        21.100000     Mexico   \n",
-       "\n",
-       "                         geometry  \n",
-       "0     POINT (-40.70056 -19.53000)  \n",
-       "1     POINT (-40.70056 -19.53000)  \n",
-       "2      POINT (-38.64639 -8.59222)  \n",
-       "3      POINT (-38.02361 -8.10528)  \n",
-       "4      POINT (-38.11306 -8.59222)  \n",
-       "...                           ...  \n",
-       "3644  POINT (-64.17000 -31.14000)  \n",
-       "3645  POINT (-56.44000 -24.09000)  \n",
-       "3646  POINT (-56.77000 -26.02000)  \n",
-       "3647  POINT (-61.40000 -26.83000)  \n",
-       "3648   POINT (-89.58000 21.10000)  \n",
-       "\n",
-       "[3649 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "species_gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "long_range = list(range(-130, -29))\n",
-    "lat_range = list(range(-60, 51))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Make list of 1 degree grid cells with shapely polygons\n",
+    "long_range = list(range(-130, -29))\n",
+    "lat_range = list(range(-60, 51))\n",
+    "\n",
     "poly_list = []\n",
     "\n",
     "for x in long_range:\n",
@@ -394,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_df_1d['cell_no'] = list(range(0, len(grid_df_1d)))"
+    "grid_df_1d['cell_no'] = list(range(0, len(grid_df_1d)))  "
    ]
   },
   {
